tests/ui/invalid_frozen_pyclass_borrow.stderr
error: cannot use `#[pyo3(set)]` on a `frozen` class
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:44:12
   |
44 |     #[pyo3(set)]
   |            ^^^

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:12:19
    |
 12 |     fn mut_method(&mut self) {}
    |                   ^ type mismatch resolving `<Foo as PyClass>::Frozen == False`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:3:1
    |
  3 | #[pyclass(frozen)]
    | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::impl_::extract_argument::extract_pyclass_ref_mut`
   --> src/impl_/extract_argument.rs:212:56
    |
212 | pub fn extract_pyclass_ref_mut<'a, 'holder, T: PyClass<Frozen = False>>(
    |                                                        ^^^^^^^^^^^^^^ required by this bound in `extract_pyclass_ref_mut`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:9:1
    |
  9 | #[pymethods]
    | ^^^^^^^^^^^^ type mismatch resolving `<Foo as PyClass>::Frozen == False`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:3:1
    |
  3 | #[pyclass(frozen)]
    | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `PyClassGuardMut`
   --> src/pyclass/guard.rs:600:43
    |
600 | pub struct PyClassGuardMut<'a, T: PyClass<Frozen = False>> {
    |                                           ^^^^^^^^^^^^^^ required by this bound in `PyClassGuardMut`
    = note: this error originates in the attribute macro `pymethods` which comes from the expansion of the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:17:31
    |
 17 |     let borrow = foo.bind(py).borrow_mut();
    |                               ^^^^^^^^^^ type mismatch resolving `<Foo as PyClass>::Frozen == False`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:3:1
    |
  3 | #[pyclass(frozen)]
    | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Bound::<'py, T>::borrow_mut`
   --> src/instance.rs:590:20
    |
588 |     pub fn borrow_mut(&self) -> PyRefMut<'py, T>
    |            ---------- required by a bound in this associated function
589 |     where
590 |         T: PyClass<Frozen = False>,
    |                    ^^^^^^^^^^^^^^ required by this bound in `Bound::<'py, T>::borrow_mut`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:28:33
    |
 28 |     let borrow = child.bind(py).borrow_mut();
    |                                 ^^^^^^^^^^ type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::False`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:24:1
    |
 24 | #[pyclass(frozen, extends = MutableBase)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Bound::<'py, T>::borrow_mut`
   --> src/instance.rs:590:20
    |
588 |     pub fn borrow_mut(&self) -> PyRefMut<'py, T>
    |            ---------- required by a bound in this associated function
589 |     where
590 |         T: PyClass<Frozen = False>,
    |                    ^^^^^^^^^^^^^^ required by this bound in `Bound::<'py, T>::borrow_mut`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:33:11
     |
  33 |     class.get();
     |           ^^^ type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
     |
note: expected this to be `pyo3::pyclass::boolean_struct::True`
    --> tests/ui/invalid_frozen_pyclass_borrow.rs:21:1
     |
  21 | #[pyclass(subclass)]
     | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Py::<T>::get`
    --> src/instance.rs:1712:20
     |
1710 |     pub fn get(&self) -> &T
     |            --- required by a bound in this associated function
1711 |     where
1712 |         T: PyClass<Frozen = True> + Sync,
     |                    ^^^^^^^^^^^^^ required by this bound in `Py::<T>::get`
     = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:38:11
    |
 38 |     class.get();
    |           ^^^ type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
    |
note: expected this to be `pyo3::pyclass::boolean_struct::True`
   --> tests/ui/invalid_frozen_pyclass_borrow.rs:21:1
    |
 21 | #[pyclass(subclass)]
    | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::Bound::<'py, T>::get`
   --> src/instance.rs:646:20
    |
644 |     pub fn get(&self) -> &T
    |            --- required by a bound in this associated function
645 |     where
646 |         T: PyClass<Frozen = True> + Sync,
    |                    ^^^^^^^^^^^^^ required by this bound in `Bound::<'py, T>::get`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0271`.
